# NN_pytorch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: experimentation.ipynb
scripts/: evaluate.py  optimize.py  train.py
src/nn_pytorch/: __init__.py  config.py  data.py  plots.py  trainer.py
src/nn_pytorch/models/: FNN.py  dynamic_FNN.py
src/nn_pytorch/utils/: device.py  paths.py
