[project]
name = "nn-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nn_pytorch"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
nn-pytorch = { workspace = true, editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nn-pytorch",
]
